fix: file tied for human readability

--- a/src/index.css
+++ b/src/index.css
@@ -22,42 +22,8 @@
     justify-content: space-evenly;
     align-items: center;
     }
-    /* .background {
-        height: 1px;
-        background: 1px;
-    } */
-    /* .firstXLine {
-        position: relative;
-        z-index: -5;
-        height: 69vh;
-        min-height: min-content;
-    } */
-    /* .firstXLine::before {
-        content: '';
-        position: absolute;
-        bottom: 3vh;
-        width: 100%;
-        height: 2px;
-        background-color: #DFF5EF;
-        z-index: -6;
-    } */
-    /* .secondXLine {
-        position: relative;
-        z-index: -5;
-    } */
-    /* .secondXLine::before {
-        content: '';
-        position: absolute;
-        bottom: 5vh;
-        width: 100%;
-        height: 2px;
-        background-color: #DFF5EF;
-        z-index: -6;
-    } */
     .webkitDefault {
         -webkit-tap-highlight-color: transparent;
-        /* -webkit-box-shadow: none;
-        -moz-box-shadow: none; */
     }
     body[data-aos-duration='5000'] [data-aos],
     [data-aos][data-aos][data-aos-duration='5000'] {
